--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .row {
     display: flex;
 }
@@ -5,4 +16,7 @@
     border: 1px solid black;
     width: 50px;
     height: 50px;
+}
+.tile:hover {
+    background-color: black;
 }
