--- a/style.css
+++ b/style.css
@@ -3,20 +3,36 @@
     padding: 0;
 }
 body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.grid {
     height: 100vh;
+    width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+.configurations {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .row {
     display: flex;
 }
 .tile {
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     width: 50px;
     height: 50px;
 }
-.tile:hover {
-    background-color: black;
+button {
+    width: 200px;
+    height: 50px;
+    margin-bottom: 20px;
 }
