--- a/style.css
+++ b/style.css
@@ -3,20 +3,24 @@
     padding: 0;
 }
 body {
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    background-color: dimgrey;
 }
 
 .grid {
-    height: 100vh;
-    width: 70%;
+    height: 75%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 15px solid red;
+    align-self: center;
 }
 .configurations {
-    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,11 +29,13 @@ body {
 
 .row {
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 .tile {
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    width: 50px;
-    height: 50px;
+    flex: 1;
 }
 button {
     width: 200px;
